# silverfox-rust

./: .env  .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/api/: api.rs  mod.rs
src/api/response/: common.rs  error.rs  mod.rs
src/common/: app_state.rs
src/module/resource/: mod.rs
src/module/resource/domain/: mod.rs  subject_entity.rs
src/module/resource/repository/: mod.rs  subject_repository.rs
src/module/resource/service/: mod.rs  subject_service.rs
